--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Dancer2-Plugin-Locale-Wolowitz
 
+0.03    2015-09-21
+        Use relative path (Bas Bloemsaat)
+        Better browser header handling with I18N::AcceptLanguage
 0.02    2014-06-26
         Test patched for Dancer2 > 0.14 support
 0.01    2014-06-26
